tests/rosetta/out/C/bitmap-read-an-image-through-a-pipe.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:44Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:09:44Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  char *key;
  int value;
} pair_string_int;
static pair_string_int pair_string_int_new(char *key, int value) {
  pair_string_int p;
  p.key = key;
  p.value = value;
  return p;
}
typedef struct {
  int len;
  int cap;
  pair_string_int *data;
} map_string_int;
static map_string_int map_string_int_create(int cap) {
  map_string_int m;
  m.len = 0;
  m.cap = cap;
  m.data = cap ? calloc(cap, sizeof(pair_string_int)) : NULL;
  if (cap && !m.data) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return m;
}
static void map_string_int_put(map_string_int *m, char *k, int v) {
  for (int i = 0; i < m->len; i++)
    if (strcmp(m->data[i].key, k) == 0) {
      m->data[i].value = v;
      return;
    }
  if (m->len >= m->cap) {
    m->cap = m->cap ? m->cap * 2 : 4;
    m->data =
        (pair_string_int *)realloc(m->data, sizeof(pair_string_int) * m->cap);
  }
  m->data[m->len++] = pair_string_int_new(k, v);
}
static int map_string_int_get(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return m.data[i].value;
  return 0;
}
static int map_string_int_contains(map_string_int m, const char *k) {
  for (int i = 0; i < m.len; i++)
    if (strcmp(m.data[i].key, k) == 0)
      return 1;
  return 0;
}
static int cmp_map_string_int(map_string_int a, map_string_int b) {
  int aa = map_string_int_get(a, "a");
  int ba = map_string_int_get(b, "a");
  if (aa != ba)
    return aa > ba ? 1 : -1;
  int ab = map_string_int_get(a, "b");
  int bb = map_string_int_get(b, "b");
  if (ab != bb)
    return ab > bb ? 1 : -1;
  return 0;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static char *ppmData = "P3\n2 2\n1\n0 1 1 0 1 0 0 1 1 1 0 0\n";
static int img;

typedef struct {
  int err;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  char *magic;
  int w;
  int h;
  int max;
  list_int px;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int parseIntStr(char *str) {
  __auto_type i = 0;
  __auto_type neg = 0;
  char *tmp1 = slice_string(str, 0, 1);
  if ((str.len > 0 && tmp1 == "-")) {
    neg = 1;
    i = 1;
  }
  __auto_type n = 0;
  map_string_int tmp2 = map_string_int_create(10);
  map_string_int_put(&tmp2, "0", 0);
  map_string_int_put(&tmp2, "1", 1);
  map_string_int_put(&tmp2, "2", 2);
  map_string_int_put(&tmp2, "3", 3);
  map_string_int_put(&tmp2, "4", 4);
  map_string_int_put(&tmp2, "5", 5);
  map_string_int_put(&tmp2, "6", 6);
  map_string_int_put(&tmp2, "7", 7);
  map_string_int_put(&tmp2, "8", 8);
  map_string_int_put(&tmp2, "9", 9);
  __auto_type digits = tmp2;
  while ((i < str.len)) {
    char *tmp3 = slice_string(str, i, i + 1);
    n = n * 10 + map_string_int_get(digits, tmp3);
    i = i + 1;
  }
  if (neg) {
    n = (-n);
  }
  return n;
}

list_string splitWs(char *s) {
  list_string parts = list_string_create(0);
  __auto_type cur = "";
  __auto_type i = 0;
  while (i < strlen(s)) {
    __auto_type ch = slice_string(s, i, i + 1);
    if ((strcmp(ch, " ") == 0) || ch == "\n" || ch == "\t" || ch == "\r") {
      if (strlen(cur) > 0) {
        list_string tmp4 = list_string_create(1);
        tmp4.data[0] = cur;
        list_string tmp5 = concat_list_string(parts, tmp4);
        parts = tmp5;
        cur = "";
      }
    } else {
      char *tmp6 = concat_string(cur, ch);
      cur = tmp6;
    }
    i = i + 1;
  }
  if (strlen(cur) > 0) {
    list_string tmp7 = list_string_create(1);
    tmp7.data[0] = cur;
    list_string tmp8 = concat_list_string(parts, tmp7);
    parts = tmp8;
  }
  return parts;
}

int parsePpm(char *data) {
  __auto_type toks = splitWs(data);
  if (toks.len < 4) {
    return (tmp_item_t){.err = 1};
  }
  __auto_type magic = toks.data[0];
  __auto_type w = parseIntStr(toks.data[1]);
  __auto_type h = parseIntStr(toks.data[2]);
  __auto_type maxv = parseIntStr(toks.data[3]);
  list_int px = list_int_create(0);
  __auto_type i = 4;
  while (i < toks.len) {
    int tmp9_data[1];
    list_int tmp9 = {1, tmp9_data};
    tmp9.data[0] = parseIntStr(toks.data[i]);
    list_int tmp10 = concat_list_int(px, tmp9);
    px = tmp10;
    i = i + 1;
  }
  return (tmp_item1_t){.magic = magic, .w = w, .h = h, .max = maxv, .px = px};
}

int _mochi_main() {
  img = parsePpm(ppmData);
  char *tmp11 = _str(img.w);
  char *tmp12 = concat_string("width=", tmp11);
  char *tmp13 = concat_string(tmp12, " height=");
  char *tmp14 = _str(img.h);
  char *tmp15 = concat_string(tmp13, tmp14);
  printf("%s\n", tmp15);
  return 0;
}
int main() { return _mochi_main(); }
